--- a/_posts/2021-5-19-党史记录.md
+++ b/_posts/2021-5-19-党史记录.md
@@ -6,7 +6,7 @@ author: Rody
 
 CPC（Communist Party of China）
 
-### 党的基本知识1
+### 党的基本知识1.0
 
 #### **1、党的性质**
 
@@ -94,7 +94,7 @@ CPC（Communist Party of China）
 
 第三，要有在生产、工作、学习和社会生活中起先锋模范作用的觉悟。
 
-### 党的基本知识2
+### 党的基本知识2.0
 
 #### **1. 党的根本大法**
 
@@ -147,6 +147,18 @@ CPC（Communist Party of China）
 十八届四中全会，深入贯彻习近平总书记系列重要讲话精神
 
 > 一个中心、两个基本点”，其中“一个中心”是“中华民族伟大复兴的中国梦”；“两个基本点”是“全面深化改革和坚持群众路线”。
+
+### 党的基本知识3.0
+
+#### 1，两个确立
+
+中国共产党第十九届中央委员会第六次全体会议公报
+
+> 确立习近平同志党中央的核心、全党的核心地位，确立习近平新时代中国特色社会主义思想的指导地位
+
+#### 2，两个维护
+
+> 坚决维护习近平总书记党中央的核心、全党的核心地位，坚决维护党中央权威和集中统一领导
 
 ### 党的部分理论
 
